munin (1.1.0)

  * Added a table in the service view page, with information about each 
    field.
  * Added plugin options "graph_info" and "<field>.info", which can be used
    to describe the graph/fields in the above mentioned table.

munin (1.1.0)

  * Bug regarding logo namechange from logo.gif to logo.png, when installing.
  * Allow/deny in munin-node can now be configured per plugin, in addition
    to "globally" for the whole node.
  * "Upped" som plugins from contrib/manual to manual or auto.
  * Code cleanups.

munin (1.0.0pre4)

  * Munin-update now properly ignores node with "update no".
  * The generic/apache_* plugins now have defined max values.
  * New plugins generic/{sendmail*,amavis,apc_envunit} contributed by Xavier
    Redon.
  * Turned off scaling of values for cpu-graphs (no more nano-percentages).
  * New plugin linux/iostat_ios to graph the number of I/O operations.
    Contributed by Per A. Buer.
  * Added user configuration for generic/postfix* (SF#895680).
  * Fixed links in HTML templates (Deb#236792).
  * Fixed broken autoconf in apache-* plugins (Deb#236144).
  * Fixed bug in mysql-plugins (Deb#233762).
  * Fixed a problem in the node when running as a non-root user and
    using sudo to run the plugins (Deb#236694).
  * Clarified the vlabels in the apache-plugins (Deb#238594).
  * Patched temp and voltage parts of linux-pugin sensors_* with better 
    regexp (Deb#245289, SF#906868).
  * Changed default ARCH variable in Makefile.config, to support
    older tr-s (SF#898814).
  * Make "graph_scale no" affect y-axis as well as numbers below the graph
    (Deb#236834).
  * New SNMP plugins: df, if_err, processes, fc_if (fibre-channel), fc_if_err,
    users, load.
  * Cleaned up Solaris plugins (SF#944389, ++)
  * New logo by Bianca Pfingsten, sponsored by Mediahaus Biering Grafischer
    Betrieb GmbH. (Thanks :-)
  * Made solaris plugin fs_df work without GNU df (SF#944389).
  * New solaris plugin temperature, by Richard van den Berg.