@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/16 11:23:36  jimmyo
+# Bugfix in the linux/df_inode plugin, regarding filesystems without inodes.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -33,7 +36,7 @@ fs() {
 }
 
 print_values() {
-	df -P -l -i -x none | tail +2 | grep -v "//" | while read i; do
+	df -P -l -i -x none | tail +2 | grep -v "//" | awk '$5 ~ /[0-9]%/ {print}' | while read i; do
 		if [ "`fs $i`" = "reiserfs" ] ; then continue ; fi
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 ".value " }'`
 		echo -n "$name "
@@ -55,7 +58,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Inode usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
-	df -P -l -i  -x none| tail +2 | grep -v "//" | while read i; do
+	df -P -l -i  -x none| tail +2 | grep -v "//" | awk '$5 ~ /[0-9]%/ {print}' | while read i; do
 		if [ "`fs $i`" = "reiserfs" ] ; then continue ; fi
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 }'`
 		echo -n "$name.label "
