@@ -4,6 +4,8 @@ munin (1.1.0)
     field.
   * Added plugin options "graph_info" and "<field>.info", which can be used
     to describe the graph/fields in the above mentioned table.
+  * Bugfix in the linux/df_inode plugin, regarding filesystems withouth
+    inodes.
 
 munin (1.1.0)
 
